# qx-simulator

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AUTHORS  CHANGELOG.md  CMakeLists.txt  Dockerfile.build  Jenkinsfile  LICENSE.md  README  README.md  RELEASE.md  TODO  conanfile.py  mkdocs-base.yaml  setup.py  version.py  versions.json
python/: CMakeLists.txt  Qxelarator.i  qxelarator.i
python/qxelarator/: __init__.py
qxelarator/qxelarator/: CMakeLists.txt  __init__.py  qx_interface.h  qx_simulator.h  qxelarator.h  qxelarator.i
src/: .Tpo  AUTHORS  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  confdefs.h  config.h  config.h.in  config.status  configure  configure.ac  emulator.cc  interface_test.cc  libqasm_interface.h  precision_loss_result.csv  qx.pc  qx.pc.in  qx_representation.cc  qx_representation.h  qx_server.cc  qx_server.h  qx_version.h  simulator.cc  simulator_old.cc
src/INFO/: README  todo.lst
src/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
src/benchmark/: cnot_16q_bench.qc  cnot_24q_bench.qc  entangle_22_bench.qc  hadamard_24q_bench.qc  hadamard_first_28q_bench.qc  pauli_x_first_26q_bench.qc  qft_22q.qc  qft_24q.qc
src/circuits/: bell_pair.qc  benchmark.qc  entangle.qc  epr.qc  full_adder.qc  grover_1_5q.qc  grover_3_11q.qc  initial.state  initial_quantum_state.qs  load_state.qc  measure_test.qc  qec_3q_bit_flip_code.qc  qec_3q_bit_flip_code_noisy.qc  qec_3q_phase_flip_code.qc  qft_5q.qc  qft_8q.qc  rb.qc  result_of_the_execution_of_transversal_cnot_on_01_logical_state.txt  result_of_the_execution_of_transversal_cnot_on_10_logical_state.txt  scaffold_hn.qc  shor_9q_code.qc  stabilizer_17q_ninja_star_defs.qc  surface_code_17q_ninja_star.qc  test.qc
src/core/: .gate.h.swn  .register.cc.swn  .register.h.swn  binary_counter.cc  binary_counter.h  circuit.h  circuit_loader.h  density_operator.h  depolarizing_channel.h  error_injector.h  error_model.h  gate.cc  gate.h  gaussian.cc  gaussian.h  hash_set.h  kronecker.cc  kronecker.h  linalg.h  matrix.h  memory_monitor.h  normal_distribution.cc  random.h  register.cc  register.h
src/interface/: builder.cc  circuit_builder.h  gate_factory.h  quantum_core.h  types.h
src/parser/: CMakeLists.txt  grammar.y  qasm_ast.hpp
src/python/: circuit.py  interface.py
src/qasm/: qasm_lexer.h  qasm_loader.h  strings.h  syntax_error_exception.h
src/qcode/: epr.qc  full_adder.qc  loader  measure_test.qc  qec_3q_bit_flip_code.qc  qec_3q_phase_flip_code.qc  qft.cc  quantum_code_loader.h  quantum_state_loader.h  qx-simulator-mac-osx  qx_strings.h  stabilizer_17q_ninja_star_defs.qc  strings.h  test.qc
src/qecc/: ninja_star.h
src/qx/: Circuit.cc  Circuit.cpp  CircuitBuilder.cpp  Core.cc  Core.cpp  ErrorModels.cpp  GateConvertor.cpp  Gates.cpp  InstructionExecutor.cpp  Instructions.cpp  LibqasmInterface.cc  LibqasmInterface.cpp  OperandsHelper.cpp  QuantumState.cpp  Qxelarator.cc  Qxelarator.cpp  Random.cc  Random.cpp  RegisterManager.cpp  SimulationResult.cc  SimulationResult.cpp  Simulator.cc  Simulator.cpp  SparseArray.cpp  V1xLibqasmInterface.cpp  V3xLibqasmInterface.cpp  circuit.cpp  circuit_builder.cpp  cqasm_v3x.cpp  dense_unitary_matrix.cpp  dummy.cc  error_models.cpp  instructions.cpp  operands_helper.cpp  quantum_state.cpp  qxelarator.cpp  random.cpp  register_manager.cpp  simulation_result.cpp  simulator.cpp  (+1 more)
src/qx-server/: server.cc  server.h
src/qx-simulator/: Simulator.cc  Simulator.cpp  simulator.cc  simulator.cpp
src/qx-simulator-old/: simulator_old.cc
src/server/: CMakeLists.txt  qx_server.cc  qx_server.h
src/tests/: circuit_test.cc  first_test.cc  gate_test.cc  noisy_gate_test.cc  precision_loss_experiment.cc  precision_loss_test.cc  stress_test.cc
src/tools/: CMakeLists.txt  ninja_star_simulator  ninja_star_simulator.cc  qft_generator  qft_generator.cc  simulator.cc
src/xpu-0.1.5/: AUTHORS  COPYING  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool  libxpu-0.1.5.la  modif.lst  stamp-h2  xpu-0.1.3.pc  xpu-0.1.5.pc  xpu-config.h  xpu.cc  xpu.h  xpu.lo  xpu.pc.in
test/: CMakeLists.txt  DenseUnitaryMatrixTest.cpp  ErrorModelsTest.cpp  IntegrationTest.cpp  QuantumStateTest.cpp  RandomTest.cpp  SparseArrayTest.cpp  bitset_test.cpp  dense_unitary_matrix.cpp  dense_unitary_matrix_test.cpp  error_models_test.cpp  integration_test.cpp  main.cpp  operands_helper.cpp  quantum_state.cpp  quantum_state_test.cpp  random_test.cpp  register_manager.cpp  sparse_array.cpp  sparse_array_test.cpp
test/qxelarator/: README  bell_pair.qasm  test_Qxelarator.py  test_qxelarator.py
tests/: BitsetTest.cc  BitsetTest.cpp  CMakeLists.txt  DenseUnitaryMatrixTest.cc  DenseUnitaryMatrixTest.cpp  ErrorModelsTest.cpp  IntegrationTest.cc  IntegrationTest.cpp  QuantumStateTest.cc  QuantumStateTest.cpp  README.md  RandomTest.cpp  SparseArrayTest.cc  SparseArrayTest.cpp  gatetest.cc  perf_test.cc  qec_3q_bit_flip_code_simple.qc  toffoli.qc
tests/benchmark/: cnot_16q_bench.qc  entangle_18_bench.qc  entangle_19_bench.qc  entangle_20_bench.qc  entangle_21_bench.qc  entangle_22_bench.qc  entangle_24_bench.qc  entangle_26_bench.qc  entangle_28_bench.qc  grover_17q.qc  grover_19q.qc  grover_25q.qc  grover_27q.qc  grover_30_21q.qc  hadamard_20q_bench.qc  hadamard_24q_bench.qc  hadamard_26q_bench.qc  hadamard_first_26q_bench.qc  hadamard_hn_28q_bench.qc  hadamard_last_28q_bench.qc  hadamard_middle_28q_bench.qc  pauli_x_first_26q_bench.qc  pauli_x_first_28q_bench.qc  qft_18q.qc  qft_19q.qc  qft_20q.qc  qft_21q.qc  qft_22q.qc  qft_24q.qc  qft_26q.qc  qft_28q.qc
tests/circuits/: bell_pair.qc  benchmark.qc  bin_ctrl.qc  classical_not.qc  entangle.qc  epr.qc  epr_test.qc  fault_tolerant_steane.qc  full_adder.qc  grover_3_11q.qc  grover_search.qc  integer_arguments.qc  measure.qc  measure_all.qc  measure_test.qc  prep_x.qc  prep_y.qc  prep_z.qc  qec_3q_bit_flip_code.qc  qec_3q_bit_flip_code_noisy.qc  qec_3q_bit_flip_code_simple.qc  qec_3q_bit_flip_code_with_correction.qc  qec_3q_phase_flip_code.qc  qft_3q.qc  (+21 more)
(+413 files in other folders)
